[gd_scene load_steps=4 format=3 uid="uid://c5dug6ks62y2v"]

[ext_resource type="Script" path="res://Scripts/Coffee_Pouring_Minigame.gd" id="1_mejo2"]
[ext_resource type="Texture2D" uid="uid://6fh2532iylep" path="res://Assets/1386638.png" id="2_pm21e"]
[ext_resource type="Texture2D" uid="uid://y77gf756avay" path="res://Assets/vector-cartoon-wooden-texture-background-600nw-2145003917.png" id="2_xc4wm"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mejo2")
pourSpeed = 60.0

[node name="Cup" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 184.0
offset_top = 168.0
offset_right = 440.0
offset_bottom = 368.0
texture = ExtResource("2_pm21e")

[node name="Coffee" type="ColorRect" parent="Cup"]
z_index = -1
layout_mode = 0
offset_left = 36.265
offset_top = 96.0
offset_right = 173.885
offset_bottom = 181.37
color = Color(0.353332, 0.173159, 0.105567, 1)

[node name="Fill_Line" type="ColorRect" parent="Cup"]
z_index = -1
layout_mode = 0
offset_left = 32.0
offset_top = 48.0
offset_right = 176.0
offset_bottom = 55.0
color = Color(0.897064, 0, 0.225493, 1)

[node name="TargetLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 160.0
offset_top = 72.0
offset_right = 426.0
offset_bottom = 159.0
horizontal_alignment = 1

[node name="ResultLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 58.0
offset_top = 378.0
offset_right = 540.0
offset_bottom = 451.0
horizontal_alignment = 1

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 528.0
offset_top = 232.0
offset_right = 729.0
offset_bottom = 298.0
texture = ExtResource("2_xc4wm")
expand_mode = 3
stretch_mode = 1

[node name="CurrentLabel" type="Label" parent="TextureRect"]
layout_mode = 0
offset_left = 1.0
offset_top = 2.0
offset_right = 201.0
offset_bottom = 66.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
horizontal_alignment = 1
vertical_alignment = 1

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(898.391, 512.399)
